Update `MasterDictionaryServiceTest` to replace `get(0)` with `getFirst()` for cleaner and more accurate access to dictionary entries.